# Boab

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
data/: vendor-pqc-registry.json
docs/: backlog-v1.1.md  cbom.md  scanners.md  usage.md  vendor-registry.md
examples/: README.md
examples/demo/: inventory.txt  run-demo.sh
examples/demo/app/: crypto.py  handshake.go
examples/demo/certs/: ecdsa-p256.crt  ecdsa-p256.key  expired.crt  expired.key  rsa1024.crt  rsa1024.key  rsa2048.crt  rsa2048.key  rsa4096.crt  rsa4096.key
examples/demo/reports/: cbom.cdx.json  inventory.json  readiness.md
src/: cli.rs  config.rs  dedup.rs  lib.rs  main.rs  plan.rs  runner.rs  scoring.rs  storage.rs  vendor.rs  workspace.rs
src/model/: asset.rs  finding.rs  mod.rs  plan.rs  scan.rs  score.rs  system.rs  vendor.rs
src/report/: cbom.rs  json.rs  markdown.rs  mod.rs
src/scanners/: cert_store.rs  codebase.rs  mod.rs  tls.rs
src/scanners/codebase/patterns/: mod.rs
tests/: cert_scan.rs  codebase_scan.rs  end_to_end.rs  integration.rs  plan_and_vendor.rs  reports.rs
tests/fixtures/: cyclonedx-1.6.schema.json
tests/fixtures/certs/: rsa2048-selfsigned.pem
tests/fixtures/codebase/dotnet/: Example.cs
tests/fixtures/codebase/go/: example.go
tests/fixtures/codebase/java/: Example.java
tests/fixtures/codebase/js/: example.js
tests/fixtures/codebase/python/: example.py
tests/fixtures/codebase/rust/: example.rs
