[package]
name = "boab"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Boab contributors"]
license = "MIT OR Apache-2.0"
description = "PQC readiness command-line tool that helps Australian organisations meet ASD post-quantum cryptography transition obligations."
homepage = "https://github.com/jusso-dev/Boab"
repository = "https://github.com/jusso-dev/Boab"
documentation = "https://docs.rs/boab"
readme = "README.md"
keywords = ["pqc", "cryptography", "security", "cbom", "cyclonedx"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "boab"
path = "src/main.rs"

[lib]
name = "boab"
path = "src/lib.rs"

[features]
default = ["git", "pkcs12"]
git = ["dep:gix"]
pkcs12 = ["dep:p12-keystore"]
network-tests = []

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "time", "io-util", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "0.26"
x509-parser = "0.16"
ignore = "0.4"
regex = "1"
sha2 = "0.10"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
indicatif = "0.17"
comfy-table = "7.1"
time = { version = "0.3", features = ["serde", "serde-human-readable", "formatting", "parsing", "macros", "local-offset"] }
uuid = { version = "1", features = ["v4", "serde"] }
gix = { version = "0.66", default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "worktree-mutation"], optional = true }
p12-keystore = { version = "0.1", optional = true }
base64 = "0.22"
hex = "0.4"
once_cell = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }
tempfile = "3"
jsonschema = "0.18"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
